--- a/README
+++ b/README
@@ -1,2 +1,5 @@
+
+
 Info: https://github.com/Ignat99/RaNet/wiki
 Tip4commit: https://tip4commit.com/github/Ignat99/RaNet
+Modern implementations: https://github.com/cantino/huginn
